# scenevironment

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
notebooks/: Interface.ipynb
scenevironment/: agent.py  distribution.py  environment.py  lqg.py
scenevironment/tasks/: lqg.py
tests/: test_env.py  test_foo.py  test_lqg_env.py
